[BUGFIX] Rename ee.locallang to et.locallang for Estonian

--- a/Resources/Private/Language/et.locallang.xlf
+++ b/Resources/Private/Language/et.locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0">
-	<file source-language="en" target-language="ee" datatype="plaintext" original="messages" date="2021-11-04T17:54:12Z" product-name="paginatedprocessors">
+	<file source-language="en" target-language="et" datatype="plaintext" original="messages" date="2021-11-04T17:54:12Z" product-name="paginatedprocessors">
 		<header/>
 		<body>
 			<trans-unit id="pagination.previous">
