--- a/ChangeLog
+++ b/ChangeLog
@@ -8,3 +8,5 @@
     - [TASK] Improve code readability
 * 1.3.0
     - [FEATURE] add anchor option to keep paginated content in focus
+* 1.3.1
+    - [LANGUAGE] move TCA labels to translation file
