--- a/ChangeLog
+++ b/ChangeLog
@@ -14,4 +14,6 @@
     - [BUGFIX] by Willi Wehmeier: Use null coalescing operator to avoid error on
       non existing array key
 * 1.3.3
-  - [BUGFIX] eliminate Undefined array key Warning if anchorId by setting default 0
+    - [BUGFIX] eliminate Undefined array key Warning if anchorId by setting default 0
+* 1.4.0
+    - [TASK] TYPO3 12.0 compatible
