--- a/ChangeLog
+++ b/ChangeLog
@@ -32,3 +32,6 @@
     - [TASK] TYPO3 13 compatibility
 * 1.6.1
     - [TASK] Add Routes.yaml for inclusion
+* 1.6.2
+    - [FEATURE] Change first, last, previous, and next labels with TS
+    - [FEATURE] Add {pagination.totalPageCount}
