--- a/ChangeLog
+++ b/ChangeLog
@@ -43,3 +43,5 @@
     - [BUGFIX] Fix PHP Warning / Merge pull request #6 from dpolakovics/dpolakovics-patch-1
 * 1.7.1
     - [TASK] add  v14 compatibility and drop v11
+* 1.7.2
+    - [TASK] align PaginatedMenuProcessor signature with TYPO3 14 Core
